alignment issues

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ ol, li {
 }
 
 div {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: auto;
   display: block;
   position: relative;
 }
